# koop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  db_health_check.sh  manage.py  mypy.ini  pyproject.toml  requirements.txt
backend/koop/: asgi.py  settings.py  urls.py  wsgi.py
backend/product/: admin.py  models.py  serializers.py  urls.py  views.py
backend/product/migrations/: 0001_initial.py  0002_create_personal_order_and_pickup.py  0003_small_adjustments_in_product_and_pickup.py  0004_add_related_names.py  0005_add_product_personal_order_model.py  0006_productpersonalorder_add_product_only_once_to_personal_order.py
backend/product/tests/: factories.py  test_models.py  test_order_endpoint.py
frontend/: .eslintrc.js  .prettierignore  package-lock.json  package.json  webpack.config.js
frontend/src/: index.html  index.js  sagas.js  server.js  store.js
frontend/src/features/products/: productSlice.js  productTable.js  productsSlice.js  sagas.js  selectors.js
