[tool.poetry]
name = "koop"
version = "0.1.0"
description = ""
authors = ["Natalia <natalia@example.com>", "Jerzy <jerzy@example.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
psycopg2-binary = "^2.8"
django-cors-headers = "^3.7"
djangorestframework = "^3"

[tool.poetry.dev-dependencies]
black = "20.8b1"
django-debug-toolbar = "^3.2"
ipython = "^7.22"

[tool.black]
target-version = ['py39']
exclude = 'migrations/|koop/settings'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
